--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img id="robo_img" src="robo.png" alt="robo">
                 
             </div>
-                <p id="msg">hello every one</p>
+                <p id="msg"></p>
 
             <div class="user-section">
                 <p class="user">User</p>
